--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "lib/openzeppelin-contracts"]
 	branch = v4.9.3
+[submodule "cairo_contracts"]
+	path = contracts/cairo0/lib/cairo_contracts
+	url = https://github.com/OpenZeppelin/cairo-contracts
