--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,10 @@
-[submodule "contracts/solidity/lib/forge-std"]
+[submodule "forge-std"]
 	path = contracts/solidity/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
-[submodule "lib/forge-std"]
 	branch = v1.6.1
-[submodule "contracts/solidity/lib/openzeppelin-contracts"]
+[submodule "openzeppelin-contracts"]
 	path = contracts/solidity/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
-[submodule "lib/openzeppelin-contracts"]
 	branch = v4.9.3
 [submodule "cairo_contracts"]
 	path = contracts/cairo0/lib/cairo_contracts
