--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
+    "ethers": "^6.7.1",
     "get-starknet-core": "^3.2.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
