--- a/contracts/cairo/Scarb.toml
+++ b/contracts/cairo/Scarb.toml
@@ -3,4 +3,14 @@ name = "yab_cairo"
 version = "0.1.0"
 
 [dependencies]
+starknet = ">=2.2.0"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.7.0" }
+snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.7.1" }
+
+[[target.starknet-contract]]
+sierra = true
+casm = true
+
+[tool.snforge]
+exit_first = true
+
