--- a/contracts/solidity/foundry.toml
+++ b/contracts/solidity/foundry.toml
@@ -1,14 +1,6 @@
 [profile.default]
-src = 'src'
-out = 'out'
-libs = ['lib']
-remappings = [
-  "@openzeppelin/=lib/openzeppelin-contracts",
-  "forge-std/=lib/forge-std/src",
-]
+src = "src"
+out = "out"
+libs = ["lib"]
 
-[rpc_endpoints]
-goerli = 'https://rpc.ankr.com/eth_goerli'
-
-[etherscan]
-goerli = { key = "${ETHERSCAN_API_KEY}" }
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
