--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,9 @@
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.16.0",
     "starknet": "^5.19.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
