--- a/contracts/cairo/Scarb.toml
+++ b/contracts/cairo/Scarb.toml
@@ -1,10 +1,11 @@
 [package]
-name = "yab_cairo"
+name = "yab"
 version = "0.1.0"
 
 [dependencies]
 starknet = ">=2.2.0"
 openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.7.0" }
+cairo_lib = { git = "https://github.com/HerodotusDev/cairo-lib.git" }
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.7.1" }
 
 [[target.starknet-contract]]
