fix build errors; gh-pages dep

--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -23,6 +24,7 @@
     "eslint-config-next": "13.5.4",
     "ethers": "^6.7.1",
     "get-starknet-core": "^3.2.0",
+    "gh-pages": "^6.0.0",
     "next": "13.5.4",
     "postcss": "8.4.31",
     "react": "18.2.0",
