adjust npm scripts for gh-pages deploy

--- a/app/package.json
+++ b/app/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && touch ./out/.nojekyll && echo 'yab.kaizokulabs.com' > ./out/CNAME",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out -t true"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
