--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,8 @@ jobs:
         run: git fetch --unshallow --tags
       - name: Use Node.js
         uses: actions/setup-node@v3
+      - name: App dir
+        run: cd app
       - name: Install dependencies
         run: yarn install
       - name: Build
