--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,20 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Prepare repository
-        run: git fetch --unshallow --tags
       - name: Use Node.js
         uses: actions/setup-node@v3
-      - name: App dir
-        run: cd app
-      - name: Install dependencies
-        run: yarn install
-      - name: Build
-        run: yarn build
-      - name: No jekyll
-        run: touch out/.nojekyll
-      - name: Add CNAME for gh-pages
-        run: |
+      - run: |
+          cd app
+          yarn install
+          yarn build
+          touch out/.nojekyll
           echo 'https://yab.kaizokulabs.com' > out/CNAME
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
